// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopicTags should correctly render a single topic for news 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: -0.5rem;
  margin-bottom: 0;
  margin-left: -0.25rem;
  margin-right: -0.25rem;
  padding: 0;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1.125rem;
  word-break: break-word;
  margin-top: 0.5rem;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-2 a {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-height: 2.75rem;
  padding: 0.5rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F2F2F2;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222222;
}

.emotion-2 a:hover,
.emotion-2 a:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 a:visited {
  color: #6E6E73;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <a
        href="#"
      >
        test1
      </a>
    </div>
  </div>
</div>
`;

exports[`TopicTags should correctly render a single topic tag for burmese 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: -0.5rem;
  margin-bottom: 0;
  margin-left: -0.25rem;
  margin-right: -0.25rem;
  padding: 0;
}

.emotion-2 {
  font-family: Padauk,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1.375rem;
  word-break: break-word;
  margin-top: 0.5rem;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

.emotion-2 a {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-height: 2.75rem;
  padding: 0.5rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F2F2F2;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222222;
}

.emotion-2 a:hover,
.emotion-2 a:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 a:visited {
  color: #6E6E73;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <a
        href="#"
      >
        test1
      </a>
    </div>
  </div>
</div>
`;

exports[`TopicTags should correctly render a single topic tag for persian 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: -0.5rem;
  margin-bottom: 0;
  margin-left: -0.25rem;
  margin-right: -0.25rem;
  padding: 0;
}

.emotion-2 {
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1.25rem;
  word-break: break-word;
  margin-top: 0.5rem;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.8125rem;
    line-height: 1.25rem;
  }
}

.emotion-2 a {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-height: 2.75rem;
  padding: 0.5rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F2F2F2;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222222;
}

.emotion-2 a:hover,
.emotion-2 a:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 a:visited {
  color: #6E6E73;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <a
        href="#"
      >
        test1
      </a>
    </div>
  </div>
</div>
`;

exports[`TopicTags should correctly render multiple topic tags for arabic 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: -0.5rem;
  margin-bottom: 0;
  margin-left: -0.25rem;
  margin-right: -0.25rem;
  padding: 0;
  list-style-type: none;
}

.emotion-2 {
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1.25rem;
  word-break: break-word;
  margin-top: 0.5rem;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.8125rem;
    line-height: 1.25rem;
  }
}

.emotion-2 a {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-height: 2.75rem;
  padding: 0.5rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F2F2F2;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222222;
}

.emotion-2 a:hover,
.emotion-2 a:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 a:visited {
  color: #6E6E73;
}

<div>
  <ul
    class="emotion-0 emotion-1"
    role="list"
  >
    <li
      class="emotion-2 emotion-3"
    >
      <a
        href="#"
      >
        test1
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <a
        href="#"
      >
        test2
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <a
        href="#"
      >
        test3
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <a
        href="#"
      >
        test4
      </a>
    </li>
  </ul>
</div>
`;

exports[`TopicTags should correctly render multiple topic tags for news 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: -0.5rem;
  margin-bottom: 0;
  margin-left: -0.25rem;
  margin-right: -0.25rem;
  padding: 0;
  list-style-type: none;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1.125rem;
  word-break: break-word;
  margin-top: 0.5rem;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-2 a {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-height: 2.75rem;
  padding: 0.5rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F2F2F2;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222222;
}

.emotion-2 a:hover,
.emotion-2 a:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 a:visited {
  color: #6E6E73;
}

<div>
  <ul
    class="emotion-0 emotion-1"
    role="list"
  >
    <li
      class="emotion-2 emotion-3"
    >
      <a
        href="#"
      >
        test1
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <a
        href="#"
      >
        test2
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <a
        href="#"
      >
        test3
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <a
        href="#"
      >
        test4
      </a>
    </li>
  </ul>
</div>
`;

exports[`TopicTags should ignore non-TopicTag children 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: -0.5rem;
  margin-bottom: 0;
  margin-left: -0.25rem;
  margin-right: -0.25rem;
  padding: 0;
  list-style-type: none;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1.125rem;
  word-break: break-word;
  margin-top: 0.5rem;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-2 a {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-height: 2.75rem;
  padding: 0.5rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F2F2F2;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222222;
}

.emotion-2 a:hover,
.emotion-2 a:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 a:visited {
  color: #6E6E73;
}

<div>
  <ul
    class="emotion-0 emotion-1"
    role="list"
  >
    <li
      class="emotion-2 emotion-3"
    >
      <a
        href="#"
      >
        test1
      </a>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <a
        href="#"
      >
        test2
      </a>
    </li>
  </ul>
</div>
`;
